# backend/handlers.go
@@ -12,6 +12,14 @@ import (
 )
 
 // GetTasks - возвращает все задачи
+// @Summary Получить список задач
+// @Description Возвращает массив всех задач
+// @Tags Tasks
+// @Accept json
+// @Produce json
+// @Success 200 {array} Task "Список задач"
+// @Failure 500 {object} gin.H "Ошибка сервера"
+// @Router /tasks [get]
 func GetTasks(c *gin.Context) {
 	cursor, err := TaskCollection.Find(context.Background(), bson.M{})
 	if err != nil {
@@ -25,6 +33,16 @@ func GetTasks(c *gin.Context) {
 }
 
 // CreateTask - создает новую задачу
+// @Summary Создать задачу
+// @Description Добавляет новую задачу в базу данных
+// @Tags Tasks
+// @Accept json
+// @Produce json
+// @Param task body Task true "Данные новой задачи"
+// @Success 201 {object} Task "Созданная задача"
+// @Failure 400 {object} gin.H "Некорректные данные"
+// @Failure 500 {object} gin.H "Ошибка сервера"
+// @Router /tasks [post]
 func CreateTask(c *gin.Context) {
 	var task Task
 	if err := c.BindJSON(&task); err != nil {
@@ -44,6 +62,17 @@ func CreateTask(c *gin.Context) {
 }
 
 // UpdateTask - обновляет задачу по ID
+// @Summary Обновить задачу
+// @Description Обновляет существующую задачу по её ID
+// @Tags Tasks
+// @Accept json
+// @Produce json
+// @Param id path string true "ID задачи"
+// @Param task body Task true "Обновленные данные задачи"
+// @Success 200 {object} gin.H "Сообщение об успешном обновлении"
+// @Failure 400 {object} gin.H "Некорректные данные"
+// @Failure 500 {object} gin.H "Ошибка сервера"
+// @Router /tasks/{id} [put]
 func UpdateTask(c *gin.Context) {
 	id := c.Param("id")
 	objectID, _ := primitive.ObjectIDFromHex(id)
@@ -64,6 +93,15 @@ func UpdateTask(c *gin.Context) {
 }
 
 // DeleteTask - удаляет задачу по ID
+// @Summary Удалить задачу
+// @Description Удаляет задачу по её ID
+// @Tags Tasks
+// @Accept json
+// @Produce json
+// @Param id path string true "ID задачи"
+// @Success 200 {object} gin.H "Сообщение об успешном удалении"
+// @Failure 500 {object} gin.H "Ошибка сервера"
+// @Router /tasks/{id} [delete]
 func DeleteTask(c *gin.Context) {
 	id := c.Param("id")
 	objectID, _ := primitive.ObjectIDFromHex(id)
